[package]
name = "fleet-scanner"
version = "0.1.0"
edition = "2021"
description = "CLI tool for scanning a directory of git repositories and producing a health report"
license = "MIT"
readme = "README.md"
keywords = ["git", "scanner", "health", "cli", "repository"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
colored = "2"
comfy-table = "7"

[dev-dependencies]
tempfile = "3"
